# gl

./: .gitignore  CMakeLists.txt
src/: main.cc
src/core/: buffer.cc  buffer.h  context.cc  context.h  shader.cc  shader.h  texture.cc  texture.h  util.cc  util.h
src/glsl/: a.frag  a.vert  f.frag  v.vert
